--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <section>
      <div>
         <h1>Ada Lovelace</h1>
-        <img src="Ada_Lovelace.png" alt="Foto Ada Lovelace">
+        <img src="Ada_Lovelace.png" alt="Foto da Ada Lovelace">
      </div>
 
      <p>Augusta Ada Byron King, Condessa de Lovelace (nascida Byron, 10 de dezembro de 1815 — 27 de novembro de 1852), atualmente conhecida como Ada Lovelace, foi uma matemática e escritora inglesa. 
